# userifc_py

./: Makefile  README.rst  vcs_bkup.sh
app/: .bumpversion.cfg  README.rst  nose2.cfg  setup.py
app/docs/: conf.py  index.rst
app/userifc_py/demo/: __init__.py  __main__.py  cli.py  lib.py  person.py
app/userifc_py/demo/resources/: pkginfo.json
app/userifc_py/demo/tests/: __init__.py  __main__.py  test_new.py  test_props_new.py
aux/: .bumpversion.cfg  HISTORY.rst  README.rst  nose2.cfg  setup.cfg  setup.py
aux/docs/: conf.py  index.rst
aux/userifc_py/: __init__.py
aux/userifc_py/aux/: __init__.py  observer.py  subject.py
aux/userifc_py/aux/resources/: logging.yaml  (+1 more)
curses/: .bumpversion.cfg  HISTORY.rst  MANIFEST.in  README.rst  nose2.cfg  setup.py
curses/docs/: conf.py  index.rst
curses/userifc_py/curses/: __init__.py  hello_controller.py  hello_model.py  hello_view.py
gtk/: .bumpversion.cfg  .gitignore  .hgignore  HISTORY.rst  README.rst  exclude.lst  nose2.cfg  requirements.txt  setup.py  setup_addcmds.py
gtk/docs/: conf.py  index.rst
gtk/userifc_py/gtk/: __init__.py  hello_controller.py  hello_formview.py  hello_model.py  hello_view.py
javafx/: .bumpversion.cfg  HISTORY.rst  README.rst  nose2.cfg  setup.py
javafx/docs/: conf.py  index.rst
javafx/userifc_py/javafx/: __init__.py  hello_controller.py  hello_formview.py  hello_model.py  hello_view.py
qt/: .bumpversion.cfg  HISTORY.rst  README.rst  nose2.cfg  setup.py  setup_addcmds.py
qt/docs/: conf.py  index.rst
qt/userifc_py/qt/: __init__.py  hello_controller.py  hello_formview.py  hello_model.py  hello_quickcontroller.py  hello_quickformview.py  hello_view.py
swing/: .bumpversion.cfg  .pycheckrc  HISTORY.rst  README.rst  nose2.cfg  setup.py  setup_addcmds.py
swing/docs/: conf.py  index.rst
swing/userifc_py/swing/: __init__.py  hello_controller.py  hello_formview.py  hello_model.py  hello_view.py
tcltk/: .bumpversion.cfg  HISTORY.rst  README.rst  nose2.cfg  setup.py
tcltk/docs/: conf.py  index.rst
tcltk/userifc_py/tcltk/: __init__.py  hello_controller.py  hello_model.py  hello_view.py
wxwidgets/: .bumpversion.cfg  HISTORY.rst  README.rst  nose2.cfg  setup.cfg  setup.py
wxwidgets/docs/: conf.py  index.rst
wxwidgets/userifc_py/wxwidgets/: __init__.py  hello_controller.py  hello_formview.py  hello_model.py  hello_view.py
wxwidgets/userifc_py/wxwidgets/resources/: pkginfo.json
wxwidgets/userifc_py/wxwidgets/resources/wxwidgets/: HelloWxwidgetsDemo.cpp  helloForm-wxwidgets.xrc  hellowxwidgetsdemo.py
wxwidgets/userifc_py/wxwidgets/tests/: __init__.py  __main__.py  test_viewcontroller.py  ts_main.py
(+49 files in other folders)
