[metadata]
license-file = LICENSE
description-file = README.rst

[aliases]
## Define setup.py command aliases here
#test = pytest

[sdist]
formats = gztar zip

[bdist_wheel]
universal = 1

#[build_sphinx]
#build-dir = build/sphinx

[build_ext]
build-lib = .

[develop]
build-directory = build
install-dir = build/Lib
user = True
no-deps = True

## pytest.ini in cur dir or any parent dir
## or [tool:pytest] section in setup.cfg
[tool:pytest]
norecursedirs = .hg .git .tox .env dist build _build docs
collect_ignore = ['setup.py', 'tasks.py']
python_files = test_*.py *_test.py tests.py
addopts = -rxEfsw --strict --doctest-modules --doctest-glob=\*.rst --tb=short
#testspaths = tests

## http://coverage.readthedocs.io/en/latest/config.html
## .coveragerc in cur dir
## or [coverage:___] section in setup.cfg
[coverage:run]
#data_file = build/.coverage
source = .
omit = setup.py,tasks.py
branch = True
parallel = True

[coverage:report]
show_missing = True
precision = 2
#omit = *migrations*

[coverage:html]
#directory = build/cov
title = Coverage report

[coverage:xml]
#output = build/coverage.xml

## .flake8 in cur dir or ~/[.config/]flake8
## or [flake8] section in setup.cfg
[flake8]
max-line-length = 140
exclude = .hg,.git,build,_build,dist,docs,*/tests/*
ignore = E401,E251,W391,E302
statistics = True
max-complexity = 5

## .pep8 in cur dir or ~/.config/pep8
## or [pep8] section in setup.cfg
[pep8]
max-line-length = 140
exclude = .hg,.git,build,_build,dist,docs,*/tests/*
ignore = E401,E251,W391,E302
statistics = True

## .pep257 in cur or any parent dir
## or [pep257] section in setup.cfg
[pep257]
inherit = False
#match = .*\.py
match = .*/(?!.*_test)(?!test_).*\.py
ignore = D300,D103,D102,D101,D105

## pylint --disable 'wildcard-import,unused-import,unused-wildcard-import,multiple-imports,trailing-whitespace,bad-whitespace,redefined-builtin,wrong-spelling-in-comment,pointless-statement,unused-argument,missing-docstring' --msg-template '{C}: {line}, {column}: {msg} {msg_id}({symbol})' --reports yes --generate-rcfile | sed 's/^\[/[pylint:/' >> .pylintrc
## [.]pylintrc in cur dir or ~/[.config/]pylintrc
## or pylint --rcfile setup.cfg (with [pylint:___] section in setup.cfg)
[pylint:MESSAGES CONTROL]
disable = wildcard-import,unused-import,unused-wildcard-import,multiple-imports,trailing-whitespace,bad-whitespace,redefined-builtin,wrong-spelling-in-comment,pointless-statement,unused-argument,missing-docstring

[pylint:REPORTS]
reports = yes
msg-template = {C}: {line}, {column}: {msg} {msg_id}({symbol})
